# IMaybeAbu

./: .env  .env.dev  .env.prod  .gitignore  README.md  bot.py  dockerfile  pyproject.toml  requirements.txt
src/plugins/imaybeabu/plugins/echo/: __init__.py
src/plugins/imaybeabu/plugins/qrcode/: config.py
src/plugins/imaybeabu/plugins/react/: __init__.py
src/plugins/pjsk/: __init__.py
src/plugins/pjsk/plugins/pjsk_guess/: __init__.py  guess.py  guess_gray.py  guess_hard.py  guess_music.py  guess_music_reverse.py  lib.py  metadata.json  models.py  sekai_viewer_jackets.json  utils.py
src/plugins/pjsk/plugins/pjsk_guess/database/: base.py  mongo.py
src/plugins/pjsk/plugins/pjsk_profile/: __init__.py  card.py  metadata.json  models.py
src/plugins/qrcode/: __init__.py  config.py
